before connect app

--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -11,7 +11,7 @@ controller_manager:
 
 diff_cont:
   ros__parameters:
-
+    use_sim_time: true
     publish_rate: 50.0
 
     base_frame_id: base_link
